   :depth: 1

bzr 2.3b1
#########

:Codename: ???
:2.3b1: NOT RELEASED YET

Compatibility Breaks
********************

* `FileInWrongBranch` is deprecated in favour of `PathNotChild` and no
  longer raised.
  (Martin Pool)

* `tree_files` and `internal_tree_files` are now deprecated in favor of
  `WorkingTree.open_containing_paths`.
  (Martin Pool)

New Features
************

Bug Fixes
*********

* Check if both --diff-options and --using are set, and exit with error
  in this case. (Matthäus G. Chajdas, #234708)

* Don't print internal object name when print an invalid revision spec
  error.  (Neil Martinsen-Burrell, #598701)

* ``HTTP/1.1` test servers now set a ``Content-Length`` header to comply
  with pedantic ``HTTP/1.1`` clients. (Vincent Ladeuil, #568421)

* `PathNotChild` should not give a traceback.
  (Martin Pool, #98735)

* ``Transport.stat`` on a symlink, including a transport pointing directly
  to a symlink, now returns information about the symlink.
  (Martin Pool)

Improvements
************

* When building new working trees, default to reading from the repository
  rather than the source tree unless explicitly requested. (via
  ``--files-from`` and ``--hardlink`` for ``bzr branch`` and
  ``bzr checkout``. Generally, 2a format repositories extract
  content faster than seeking and reading content from another tree,
  especially in cold-cache situations. (John Arbash Meinel, #607298)

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******


bzr 2.2rc1
##########

:Codename: ???
:2.2rc1: NOT RELEASED YET

Compatibility Breaks
********************

New Features
************

Bug Fixes
*********

* Configuration files in ``${BZR_HOME}`` are now written in an atomic
  way which should help avoid problems with concurrent writers.
  (Vincent Ladeuil, #525571)

* Don't traceback trying to unversion children files of an already
  unversioned directory.  (Vincent Ladeuil, #494221)

Improvements
************

Documentation